removing unused files

--- a/EmployeeSalarySheet/.gitignore
+++ b/EmployeeSalarySheet/.gitignore
@@ -13,3 +13,6 @@
 .project
 
 EmployeeSalarySheet/.idea/sonarlint/*
+EmployeeSalarySheet/.idea/sonarlint/*
+
+C:/workspace/work/GovermentSalaryDiffCal/EmployeeSalarySheet/.idea/
