Removed unused idea folder

--- a/EmployeeSalarySheet/.gitignore
+++ b/EmployeeSalarySheet/.gitignore
@@ -16,3 +16,4 @@ EmployeeSalarySheet/.idea/sonarlint/*
 EmployeeSalarySheet/.idea/sonarlint/*
 
 C:/workspace/work/GovermentSalaryDiffCal/EmployeeSalarySheet/.idea/
+.idea/
